plugins/xpath/xpath-lang/testData/xpath/highlighting/types/numberToNode.xpath2
local-name(<error descr="Expected type 'node()?', got 'xs:integer'">123</error>)